hphp/hack/test/typecheck/lambda/violated_constraints.php.exp
File "violated_constraints.php", line 7, characters 9-17:
Some type constraint(s) here are violated (Typing[4323])
File "violated_constraints.php", line 3, characters 9-9:
`T` is a constrained type parameter
File "violated_constraints.php", line 3, characters 14-16:
Expected `num`
File "violated_constraints.php", line 7, characters 11-16:
But got `string`
File "violated_constraints.php", line 7, characters 25-33:
Some type constraint(s) here are violated (Typing[4323])
File "violated_constraints.php", line 3, characters 9-9:
`T` is a constrained type parameter
File "violated_constraints.php", line 3, characters 14-16:
Expected `num`
File "violated_constraints.php", line 7, characters 27-32:
But got `string`
