hphp/hack/test/typecheck/lambda/violated_constraints.php
<?hh

class A<T as num> {}

function test() : void {
  // constraints violated here in two places
  $f = (A<string> $x) : A<string> ==> { return $x;};
}
